--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,12 @@ dependencies:
 
   # datetime_picker
   flutter_datetime_picker_plus: ^2.1.0
+
+  #for datetime format
   intl: ^0.19.0
+
+  #for pick img
+  image_picker: ^0.8.4+2
 
 dev_dependencies:
   flutter_test:
