--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   #for pick img
   image_picker: ^0.8.4+2
 
+  expansion_tile_card: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
